--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,10 +19,7 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"],
-      "@eidosmedia/neon-frontoffice-ts-sdk": [
-        "./src/neon-frontoffice-ts-sdk/src"
-      ]
+      "@/*": ["./src/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
