--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 BASE_NEON_FE_URL=https://<your-neon-frontend-url>
-NEON_API_KEY=<your-neon-api-key>
+NEON_FRONTOFFICE_SERVICE_KEY=<your-neon-api-key>
