--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.6.1",
     "clsx": "^2.1.1",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.510.0",
     "next": "^15.3.0",
     "pino": "^9.6.0",
     "react": "^19.0.0",
