NEON-1429 rollback from version history

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-BASE_NEON_FE_URL=https://<your-neon-frontend-url>
+BASE_NEON_FO_URL=https://<your-neon-frontend-url>
 NEON_APP_URL=https://<your-neonapp-url>
 NEON_FRONTOFFICE_SERVICE_KEY=<your-neon-api-key>
