--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8.5.3",
+    "prettier": "^3.6.2",
     "tailwindcss": "^4.0.11",
     "typescript": "^5"
   }
